--- a/Alterwego/index.html
+++ b/Alterwego/index.html
@@ -89,7 +89,10 @@
 							<div class="form-info bs">
 								<div class="field">
 									<label>Genre</label><br/>
-									<input type="text" name="" placeholder="">
+									<select>
+										<option>Accepté</option>
+										<option>Refusé</option>
+									</select>
 								</div>
 								<div class="field">
 									<label>Nom</label><br/>
