--- a/Alterwego/index.html
+++ b/Alterwego/index.html
@@ -17,19 +17,19 @@
 					<div class="logo">						
 						<h1><img src="images/icons/logo.png" alt=""/></h1>
 					</div>
-					<li><a href="#" class="dashboard">Dashboard</a></li>
-					<li><a href="#">Modèles</a></li>
-					<li><a href="#">Offres</a></li>
-					<li><a href="#">VIN</a></li>
-					<li><a href="#">Utilisateurs</a></li>
-					<li><a href="#">Appels</a></li>
-					<li><a href="#">Contrats</a></li>
-					<li><a href="#">Parc roulant</a></li>
-					<li><a href="#">Paiments</a></li>
-					<li><a href="#">Avis</a></li>
-					<li><a href="#">Attributs</a></li>
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Statistiques</a></li>
+					<li><a href="#" class="bground dashboard">Dashboard</a></li>
+					<li><a href="#" class="bground mod">Modèles</a></li>
+					<li><a href="#" class="bground offres">Offres</a></li>
+					<li><a href="#" class="bground vin">VIN</a></li>
+					<li><a href="#" class="bground users">Utilisateurs</a></li>
+					<li><a href="#" class="bground call">Appels</a></li>
+					<li><a href="#" class="bground contrats">Contrats</a></li>
+					<li><a href="#" class="bground parc">Parc roulant</a></li>
+					<li><a href="#" class="bground payd">Paiments</a></li>
+					<li><a href="#" class="bground advis">Avis</a></li>
+					<li><a href="#" class="bground attr">Attributs</a></li>
+					<li><a href="#" class="bground faq">FAQ</a></li>
+					<li><a href="#" class="bground stat">Statistiques</a></li>
 				</nav>
 				<header>
 					<div class="first">
