--- a/Alterwego/index.html
+++ b/Alterwego/index.html
@@ -77,14 +77,25 @@
 					<div class="">
 						<form>
 							<div class="form-info bs pad13 check">
-								<label>Status</label><input type="checkbox" name="" />
-								<label>Abandon</label><input type="checkbox" name="" />
-								<label>Offres assureurs</label><input type="checkbox" name="" />
-								<label>Scoring (mail au changement)</label>
-								<select>
-									<option>Accepté</option>
-									<option>Refusé</option>
-								</select>
+								<div class="cols">
+									<label>Status</label>
+									<input type="checkbox" name="" />
+								</div>
+								<div class="cols">
+									<label>Abandon</label>
+									<input type="checkbox" name="" />
+								</div>
+								<div class="cols">
+									<label>Offres assureurs</label>
+									<input type="checkbox" name="" />
+								</div>
+								<div class="cols">
+									<label>Scoring (mail au changement)</label>
+									<select class="select">
+										<option>Accepté</option>
+										<option>Refusé</option>
+									</select>
+								</div>
 							</div>
 							<div class="form-info bs">
 								<div class="field">
@@ -122,7 +133,7 @@
 								</div>
 							</div>
 							<div class="form-info">
-									
+								
 							</div>
 						</form>
 					</div>					
