--- a/Alterwego/users.html
+++ b/Alterwego/users.html
@@ -52,28 +52,28 @@
 					</div>
 				</header>				
 				<section class="content">
-					<div class="mar10">
-						<div class="display">
-							<select>
+					<div class="mar10 filter">
+						<div class="display pad5 bs size12">
+							<select class="noborder size12">
 								<option>Date création</option>
 								<option>Date</option>
 							</select>
 						</div>
-						<div class="display">
+						<div class="display pad5 bs size12">
 							<label>du : </label>
-							<input type="text" name=""/>
+							<input class="underline size12" type="text" name=""/>
 							<label>au</label>
-							<input type="text" name=""/>
+							<input class="underline size12" type="text" name=""/>
 						</div>
-						<div class="display">
-							<select>
+						<div class="display pad5 bs size12">
+							<select class="noborder size12">
 								<option>10</option>
 								<option>20</option>
 								<option>30</option>
 							</select>
 						</div>
-						<div class="display">
-							<select>
+						<div class="display pad5 bs size12">
+							<select class="noborder size12">
 								<option>Toutes les colonnes</option>
 								<option>N colonnes</option>
 								<option>N colonnes</option>
