label + checkbox inline

--- a/Alterwego/users.html
+++ b/Alterwego/users.html
@@ -33,7 +33,7 @@
 				</nav>
 				<header>
 					<div class="first">
-						<div class="bs fleft pl0 pad5">
+						<div class="bs fleft pad5">
 							<span><i class="fa fa-search"></i></span>
 							<span><i class="fa fa-times-circle"></i>Contrat : <strong>0672222222</strong></span>
 							<span><i class="fa fa-times-circle"></i>User : <strong>Nicole</strong></span>
@@ -154,20 +154,20 @@
 						<div class="hidden p15" style="display: none">
 							<form>
 								<div class="tb-cell">
-									<label>Status : </label><input type="checkbox" />
+									<label class="display vm">Status : </label><input type="checkbox display vm" />
 								</div>
 								<div class="tb-cell">
-									<label>Abandon : </label><input type="checkbox" />
+									<label class="display vm">Abandon : </label><input type="checkbox display vm" />
 								</div>
 								<div class="tb-cell">
-									<label>Paie les loyers : </label><input type="checkbox" />
+									<label class="display vm">Paie les loyers : </label><input type="checkbox display vm" />
 								</div>
 								<div class="tb-cell">
-									<label>Offres assureurs :</label><input type="checkbox" />
+									<label class="display vm">Offres assureurs :</label><input type="checkbox display vm" />
 								</div>
 								
 								<div class="tb-cell">
-									<label>Scoring (mail au changement) :</label><input type="checkbox" />
+									<label class="display vm">Scoring (mail au changement) :</label><input type="checkbox display vm" />
 								</div>
 								<div class="tb-cell">
 									<select class="noborder bs pad5">
