--- a/Alterwego/users.html
+++ b/Alterwego/users.html
@@ -259,20 +259,20 @@
 						<div class="hidden p15">
 							<form>
 								<div class="tb-cell">
-									<label>Status : </label><input type="checkbox" />
+									<label class="display vm">Status : </label><input type="checkbox" class="display vm"/>
 								</div>
 								<div class="tb-cell">
-									<label>Abandon : </label><input type="checkbox" />
+									<label class="display vm">Abandon : </label><input type="checkbox" class="display vm"/>
 								</div>
 								<div class="tb-cell">
-									<label>Paie les loyers : </label><input type="checkbox" />
+									<label class="display vm">Paie les loyers : </label><input type="checkbox" class="display vm"/>
 								</div>
 								<div class="tb-cell">
-									<label>Offres assureurs :</label><input type="checkbox" />
+									<label class="display vm">Offres assureurs :</label><input type="checkbox" class="display vm"/>
 								</div>
 								
 								<div class="tb-cell">
-									<label>Scoring (mail au changement) :</label><input type="checkbox" />
+									<label class="display vm">Scoring (mail au changement) :</label><input type="checkbox" class="display vm"/>
 								</div>
 								<div class="tb-cell">
 									<select class="noborder bs pad5">
@@ -364,20 +364,20 @@
 						<div class="hidden p15" style="display: none">
 							<form>
 								<div class="tb-cell">
-									<label>Status : </label><input type="checkbox" />
+									<label class="display vm">Status : </label><input type="checkbox display vm" />
 								</div>
 								<div class="tb-cell">
-									<label>Abandon : </label><input type="checkbox" />
+									<label class="display vm">Abandon : </label><input type="checkbox display vm" />
 								</div>
 								<div class="tb-cell">
-									<label>Paie les loyers : </label><input type="checkbox" />
+									<label class="display vm">Paie les loyers : </label><input type="checkbox display vm" />
 								</div>
 								<div class="tb-cell">
-									<label>Offres assureurs :</label><input type="checkbox" />
+									<label class="display vm">Offres assureurs :</label><input type="checkbox display vm" />
 								</div>
 								
 								<div class="tb-cell">
-									<label>Scoring (mail au changement) :</label><input type="checkbox" />
+									<label class="display vm">Scoring (mail au changement) :</label><input type="checkbox display vm" />
 								</div>
 								<div class="tb-cell">
 									<select class="noborder bs pad5">
