--- a/Alterwego/users.html
+++ b/Alterwego/users.html
@@ -54,6 +54,7 @@
 				<section class="content">
 					<div class="mb10 pad5 filter pl0">
 						<div class="display mt0 pad5 bs size12">
+							<i class="fa fa-calendar"></i>
 							<select class="noborder size12">
 								<option>Date création</option>
 								<option>Date</option>
@@ -66,6 +67,7 @@
 							<input class="underline size12" type="text" name=""/>
 						</div>
 						<div class="display mt0 pad5 bs size12">
+							<i class="fa fa-bars"></i>
 							<select class="noborder size12">
 								<option>10</option>
 								<option>20</option>
@@ -73,6 +75,7 @@
 							</select>
 						</div>
 						<div class="display mt0 pad5 bs size12">
+							<i class="fa fa-bars rotate"></i>
 							<select class="noborder size12">
 								<option>Toutes les colonnes</option>
 								<option>N colonnes</option>
@@ -83,34 +86,34 @@
 					<div class="title">
 						<div class="select-style mb10 p10">														
 							<div class="col-list">
-								<p>crée le <i></i></p>
+								<p>crée le <i class="fa fa-sort"></i></p>
 							</div>								
 							<div class="col-list">
-								<p>modifié le<i></i></p>
+								<p>modifié le<i class="fa fa-sort"></i></p>
 							</div>
 							<div class="col-list">
-								<p>identité <i></i></p>
+								<p>identité <i class="fa fa-sort"></i></p>
 							</div>								
 							<div class="col-list">
-								<p>contact <i></i></p>
+								<p>contact <i class="fa fa-sort"></i></p>
 							</div>
 							<div class="col-list">
-								<p>activé <i></i></p>
+								<p class="line">activé <i class="fa fa-check"></i></p>
 							</div>								
 							<div class="col-list">
-								<p>yousign<i></i></p>
+								<p class="line">yousign<i class="fa fa-check"></i></p>
 							</div>
 							<div class="col-list">
-								<p>pre-auth <i></i></p>
+								<p class="line">pre-auth <i class="fa fa-check"></i></p>
 							</div>								
 							<div class="col-list">
-								<p>scoring <i></i></p>
+								<p class="line">scoring <i class="fa fa-check"></i></p>
 							</div>
 							<div class="col-list">
-								<p>dernier co <i></i></p>
+								<p class="line">dernier co <i class="fa fa-check"></i></p>
 							</div>								
 							<div class="col-list">
-								<p>dernière ofr <i></i></p>
+								<p>dernière ofr <i class="fa fa-check"></i></p>
 							</div>
 						</div>						
 					
