--- a/Alterwego/users.html
+++ b/Alterwego/users.html
@@ -53,20 +53,20 @@
 				</header>				
 				<section class="content">
 					<div class="mb10 pad5 filter pl0">
-						<div class="display mt0 pad5 bs size12">
+						<div class="display mt0 pad5 bs size12 bgwhite">
 							<i class="fa fa-calendar"></i>
 							<select class="noborder size12">
 								<option>Date création</option>
 								<option>Date</option>
 							</select>
 						</div>
-						<div class="display mt0 pad5 bs size12">
+						<div class="display mt0 pad5 bs size12 bgwhite">
 							<label>du : </label>
 							<input class="underline size12" type="text" name=""/>
 							<label>au</label>
 							<input class="underline size12" type="text" name=""/>
 						</div>
-						<div class="display mt0 pad5 bs size12">
+						<div class="display mt0 pad5 bs size12 bgwhite">
 							<i class="fa fa-bars"></i>
 							<select class="noborder size12">
 								<option>10</option>
@@ -74,7 +74,7 @@
 								<option>30</option>
 							</select>
 						</div>
-						<div class="display mt0 pad5 bs size12">
+						<div class="display mt0 pad5 bs size12 bgwhite">
 							<i class="fa fa-bars rotate"></i>
 							<select class="noborder size12">
 								<option>Toutes les colonnes</option>
@@ -119,7 +119,7 @@
 					
 					</div>
 					<div class="list-content bs">
-						<div class="list bs p15">
+						<div class="list bs p15 bgwhite">
 							<div class="listdata">
 								<p>30/07/20 <strong>11:25</strong> <i></i></p>
 							</div>								
@@ -133,19 +133,19 @@
 								<p>0612121212 <i></i></p>
 							</div>
 							<div class="listdata">
-								<p>oui <i></i></p>
+								<p class="green">oui <i></i></p>
 							</div>								
 							<div class="listdata">
-								<p>8-signé<i></i></p>
+								<p class="orange">Non<i></i></p>
 							</div>
 							<div class="listdata">
-								<p>0 - Non saisie <i></i></p>
+								<p class="orange">0 - Non saisie <i></i></p>
 							</div>								
 							<div class="listdata">
-								<p>Non traité <i></i></p>
+								<p class="green">Accepté <i></i></p>
 							</div>
 							<div class="listdata">
-								<p>Attente signature <i></i></p>
+								<p class="orange">Attente signature <i></i></p>
 							</div>								
 							<div class="listdata">
 								<p>Sandero E Bvm 314 <i></i></p>
@@ -154,7 +154,7 @@
 								<p><i></i></p>
 							</div>
 						</div>
-						<div class="hidden p15" style="display: none">
+						<div class="hidden p15 bgwhite" style="display: none">
 							<form>
 								<div class="tb-cell">
 									<label class="display vm">Status : </label><input type="checkbox display vm" />
@@ -224,7 +224,7 @@
 						</div>
 					</div>
 					<div class="list-content bs">
-						<div class="list bs p15">
+						<div class="list bs p15 bgwhite">
 							<div class="listdata">
 								<p>30/07/20 <strong>11:25</strong> <i></i></p>
 							</div>								
@@ -238,7 +238,7 @@
 								<p>0612121212 <i></i></p>
 							</div>
 							<div class="listdata">
-								<p>oui <i></i></p>
+								<p class="green">oui <i></i></p>
 							</div>								
 							<div class="listdata">
 								<p>8-signé<i></i></p>
@@ -259,7 +259,7 @@
 								<p><i></i></p>
 							</div>
 						</div>
-						<div class="hidden p15">
+						<div class="hidden p15 bgwhite">
 							<form>
 								<div class="tb-cell">
 									<label class="display vm">Status : </label><input type="checkbox" class="display vm"/>
@@ -329,7 +329,7 @@
 						</div>
 					</div>
 					<div class="list-content bs">
-						<div class="list bs p15">
+						<div class="list bs p15 bg-white">
 							<div class="listdata">
 								<p>30/07/20 <strong>11:25</strong> <i></i></p>
 							</div>								
@@ -343,7 +343,7 @@
 								<p>0612121212 <i></i></p>
 							</div>
 							<div class="listdata">
-								<p>oui <i></i></p>
+								<p class="green">oui <i></i></p>
 							</div>								
 							<div class="listdata">
 								<p>8-signé<i></i></p>
@@ -364,7 +364,7 @@
 								<p><i></i></p>
 							</div>
 						</div>
-						<div class="hidden p15" style="display: none">
+						<div class="hidden p15 bgwhite" style="display: none">
 							<form>
 								<div class="tb-cell">
 									<label class="display vm">Status : </label><input type="checkbox display vm" />
