--- a/Alterwego/users.html
+++ b/Alterwego/users.html
@@ -55,10 +55,8 @@
 					<div class="mb10 pad5 filter pl0">
 						<div class="display mt0 pad5 bs size12 bgwhite">
 							<i class="fa fa-calendar"></i>
-							<select class="noborder size12">
-								<option>Date création</option>
-								<option>Date</option>
-							</select>
+							<input class="noborder size12" type="text" placeholder="Date de création">
+							<i class="fa fa-check"></i>
 						</div>
 						<div class="display mt0 pad5 bs size12 bgwhite">
 							<label>du : </label>
